# nanowave

./: .gitignore  Cargo.toml  Cross.toml  README.md  battery-pal-review.md  build.rs  copy-lichee.sh
src/: cli.rs  main.rs  service_config.rs  tracing.rs
src/services/: mod.rs  nanowave_player.rs  nanowave_player_command.rs  nanowave_player_event.rs  nanowave_player_service.rs
ui/: app.slint  globals.slint  main.slint
