[package]
name = "nanowave"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
chrono = "0.4.44"
slint = { version = "1.15.0", features = ["backend-linuxkms-noseat", "renderer-software", "compat-1-2"] }
smol = "2.0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
clap = { version = "4.6.0", features = ["derive"] }

media_source = { path = "../media_source" } # use for local git (see cargo.toml)
cpal = { path = "../../sandreas/cpal" }
rodio = { path = "../../sandreas/rodio" }

[build-dependencies]
slint-build = "1.15.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
